<resources>
    <string name="app_name">SWACHHTA</string>
    <string name="one_click_solution">One Click Solution</string>
    <string name="todo">TODO</string>
    <string name="textview1">TextView</string>
    <string name="title_activity_click_pic">clickPicActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="textview">TextView</string>
    <string name="uploadpic">upload</string>
    <string name="clickedpic">previewpic</string>
    <string name="login_form_title">Login</string>
    <string name="login_form_username">Username</string>
    <string name="login_form_password">Password</string>
    <string name="login_form_login">LOGIN</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">Signup</string>
    <string name="signup_page_title">SignUp</string>
    <string name="signup_email_id">Email ID</string>
    <string name="signup_password">Password</string>
    <string name="signup_button">SignUp</string>
    <string name="signup_name">Name</string>
    <string name="login_email_id">Email ID</string>
    <string name="rateUs">Rate</string>
    <string name="about">About</string>
    <string name="aboutUs">This is one click solution ( Swachhta app)
        where you can just click a picture of a garbage dump and click on send button which will be processed and send to the local nearest municipal corporation with a mail.</string>
    <string name="User">User</string>
    <string name="rateText">Please rate us to and help us and provide your valuable feedback to improve 😊</string>
</resources>