<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mainpage"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_loginpage"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_signuppage"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/signup" />

        <item android:title =  "communicate" >
            <menu>
                <item
                    android:id="@+id/rateUs"
                    android:icon="@drawable/ic_baseline_rate_review_24"
                    android:title="@string/rateUs" />

                <item
                    android:id="@+id/about"
                    android:icon="@drawable/ic_baseline_people_alt_24"
                    android:title="@string/about" />
            </menu>
        </item>
    </group>
</menu>