<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_mainpage">

    <fragment
        android:id="@+id/nav_mainpage"
        android:name="com.example.swachhta.ui.mainpage.MainPageFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_mainpage"/>

    <fragment
        android:id="@+id/nav_loginpage"
        android:name="com.example.swachhta.ui.loginpage.LoginPageFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_loginpage"/>
    <fragment
        android:id="@+id/nav_signuppage"
        android:name="com.example.swachhta.ui.signup.SignupPageFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_signuppage"/>

    <fragment
        android:id="@+id/rateUs"
        android:name="com.example.swachhta.ui.rating"
        android:label="@string/rateUs"
        tools:layout="@layout/fragment_rating" />

    <fragment
        android:id="@+id/about"
        android:name="com.example.swachhta.ui.about"
        android:label="@string/User"
        tools:layout="@layout/fragment_about" />

</navigation>