<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="#0FA7E9"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:id="@+id/linearLayout">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:layout_conversion_absoluteHeight="80dp"
        tools:layout_editor_absoluteY="34dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_conversion_absoluteWidth="72dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:layout_conversion_absoluteHeight="27dp"
        tools:layout_editor_absoluteY="114dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_conversion_absoluteWidth="93dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_editor_absoluteY="141dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_conversion_absoluteWidth="182dp" />
</LinearLayout>